# FundVal-Live

./: .env.example  .gitignore  README.md  backend.spec  build-backend.sh  docker-compose.yml  docker-start.sh  package.json  start.sh  stop.sh  test-build.sh
.github/workflows/: build-android.yml  build-desktop.yml  build.yml  docker-publish.yml  release.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run.py
backend/api/: models.py  serializers.py  tasks.py  viewsets.py
backend/api/management/commands/: check_bootstrap.py  sync_funds.py
backend/api/migrations/: 0003_fund_estimate_growth_fund_estimate_nav_and_more.py
backend/api/services/: position_history.py
backend/api/utils/: __init__.py  trading_calendar.py
backend/app/: auth.py  config.py  db.py  utils.py
backend/app/routers/: account.py  ai.py  auth.py  settings.py
backend/app/services/: account.py  ai.py  data_io.py  fund.py  scheduler.py  subscription.py  trade.py
backend/fundval/: __init__.py  celery.py  config.py  settings.py  urls.py
backend/tests/: test_api_funds.py  test_calculation.py  test_celery_tasks.py  test_commands.py  test_position_filter.py  test_position_history.py  test_query_nav.py  test_sources.py  test_trading_calendar.py
docs/API文档/: 00-概述.md  02-用户认证.md  03-基金管理.md  04-账户管理.md  05-持仓管理.md  06-自选列表.md  07-数据源.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src-tauri/: Cargo.toml
frontend/src/api/: index.js
frontend/src/components/: IntradayChart.jsx  PositionCharts.jsx  (+1 more)
(+9 files in other folders)
